// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EmailDomainVerificationContainer/> render() should render the page when domain is not verified 1`] = `
<div>
  <div
    class="page-container container-fluid"
  >
    <div>
      <div
        class="alert alert-warning fade"
        role="alert"
      >
        This domain has not yet been verified. You can still send emails from this address but you may be more susceptible to deliverability issues. Please verify your domain to ensure the best possible performance.
      </div>
      <span>
        To enable DKIM signing for your domain, please add the information below to your DNS records via your DNS registrar. Note that verification of these settings may take up to 72 hours after submission.
      </span>
    </div>
    <table
      class="table records-table"
    >
      <thead
        class=""
      >
        <tr
          class="headerRow"
        >
          <td
            class="wrapper"
          >
            Status
          </td>
          <td
            class="wrapper"
          >
            Record Type
          </td>
          <td
            class="wrapper"
          >
            Host
          </td>
          <td
            class="wrapper"
          >
            Value
          </td>
          <td
            class="wrapper"
          >
            Current Values
          </td>
        </tr>
      </thead>
      <tbody
        class="tableBody"
      />
    </table>
  </div>
</div>
`;

exports[`<EmailDomainVerificationContainer/> render() should render the page when domain is verified 1`] = `
<div>
  <div
    class="page-container container-fluid"
  >
    <span>
      Your domain has been verified.
    </span>
    <table
      class="table records-table"
    >
      <thead
        class=""
      >
        <tr
          class="headerRow"
        >
          <td
            class="wrapper"
          >
            Status
          </td>
          <td
            class="wrapper"
          >
            Record Type
          </td>
          <td
            class="wrapper"
          >
            Host
          </td>
          <td
            class="wrapper"
          >
            Value
          </td>
          <td
            class="wrapper"
          >
            Current Values
          </td>
        </tr>
      </thead>
      <tbody
        class="tableBody"
      />
    </table>
  </div>
</div>
`;

exports[`<EmailDomainVerificationContainer/> render() should render the page when there is no domain 1`] = `
<div>
  <div
    class="page-container container-fluid"
  >
    <div>
      No domain and DKIM configuration has been created yet.
    </div>
    <button
      class="mt-3 btn btn-success"
      type="submit"
    >
      Add Domain
    </button>
  </div>
</div>
`;

exports[`<EmailDomainVerificationContainer/> render() should render the page with an optional verification information box when there is no domain 1`] = `
<div>
  <div
    class="page-container container-fluid"
  >
    <div
      class="alert alert-info fade"
      role="alert"
    >
      Domain verification is 
      <b>
        not required
      </b>
       
      for 
      <b>
        Gmail and Outlook
      </b>
       integrations
       
      <i>
        unless you have disabled the "email sending" setting in Gorgias for a Gmail integration.
      </i>
      <br />
      <br />
      While it is not required, you can verify the domain of a Gmail or Outlook integration, which may allow you to continue to send emails in the event of an outage on either platform, as we will be able to attempt to route your emails through our system as a backup.
    </div>
    <div>
      No domain and DKIM configuration has been created yet.
    </div>
    <button
      class="mt-3 btn btn-success"
      type="submit"
    >
      Add Domain
    </button>
  </div>
</div>
`;

exports[`<EmailDomainVerificationContainer/> render() should render the page with an optional verification information box when there is no domain 2`] = `
<div>
  <div
    class="page-container container-fluid"
  >
    <div
      class="alert alert-info fade"
      role="alert"
    >
      Domain verification is 
      <b>
        not required
      </b>
       
      for 
      <b>
        Gmail and Outlook
      </b>
       integrations
       
      <i>
        unless you have disabled the "email sending" setting in Gorgias for a Gmail integration.
      </i>
      <br />
      <br />
      While it is not required, you can verify the domain of a Gmail or Outlook integration, which may allow you to continue to send emails in the event of an outage on either platform, as we will be able to attempt to route your emails through our system as a backup.
    </div>
    <div>
      No domain and DKIM configuration has been created yet.
    </div>
    <button
      class="mt-3 btn btn-success"
      type="submit"
    >
      Add Domain
    </button>
  </div>
</div>
`;
